--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.525.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
@@ -45,11 +46,11 @@
     "sharp": "^0.34.3",
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
-    "zod": "^3.24.2",
-    "zustand": "^5.0.7"
+    "tw-animate-css": "^1.3.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/postcss": "^4.1.12",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -57,7 +58,7 @@
     "@types/react-google-recaptcha": "^2.1.9",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.1.5",
+    "tailwindcss": "^4.1.12",
     "typescript": "^5"
   }
 }
